widget/windows/nsDataObj.cpp
@@ -1360,6 +1360,11 @@ nsDataObj ::GetFileContentsInternetShortcut(FORMATETC& aFE, STGMEDIUM& aSTG) {
   ::GlobalUnlock(globalMem.get());
 
   if (aFE.tymed & TYMED_ISTREAM) {
+    if (!mIsInOperation) {
+      // The drop target didn't initiate an async operation.
+      // We can't block CMemStream::Read.
+      event = nullptr;
+    }
     RefPtr<IStream> stream =
         new CMemStream(globalMem.disown(), totalLen, event.forget());
     stream.forget(&aSTG.pstm);
